--- a/covid.html
+++ b/covid.html
@@ -6,6 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="Learn about ML Consultancy's COVID-19 safety measures and protocols for fire safety system installations and maintenance in Hyderabad.">
     <meta name="keywords" content="ML Consultancy, COVID-19 safety, Fire safety ppe kitt, safety helmets, gloves, eyeglasses, earplugs, full-body suits, vests, hard hats, safety footwear, and Respiratory protective equipment (RPE), Hyderabad">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>COVID ppe kit - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
